force-app/main/default/objects/Amex_Card_Holder__c/Amex_Card_Holder__c.object-meta.xml
<CustomObject>
    <label>Amex Card Holder</label>
    <nameField>
        <label>Card Holder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amex Card Holders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>