force-app/main/default/objects/Amex_Card_Holder__c/fields/Card_Holder_Email__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_Email__c</fullName>
    <description
  >The email address of the person who&apos;s name is on the card (may be different than the person who receives the email alerts).</description>
    <inlineHelpText
  >The email address of the person who&apos;s name is on the card (may be different than the person who receives the email alerts).</inlineHelpText>
    <label>Card Holder Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>