force-app/main/default/objects/Amex_Card_Holder__c/fields/Card_Holder_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_First_Name__c</fullName>
    <label>Card Holder First Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>