force-app/main/default/objects/Amex_Card_Holder__c/fields/Email_Alert_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Address__c</fullName>
    <description
  >Email address of the person who will receive the email alerts about this Amex Card Statement.</description>
    <inlineHelpText
  >Email address of the person who will receive the email alerts about this Amex Card Statement.</inlineHelpText>
    <label>Email Alert Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>