force-app/main/default/objects/Amex_Card_Holder__c/fields/Email_Alert_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Last_Name__c</fullName>
    <description
  >The first name of the person who will receive the email alerts for this statement.</description>
    <inlineHelpText
  >The first name of the person who will receive the email alerts for this statement.</inlineHelpText>
    <label>Email Alert Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>